--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ird-jsbridge",
   "version": "1.0.0",
   "description": "hybird and react-native js",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/chenzhaolong/ird-jsBridge/issues"
   },
-  "homepage": "https://github.com/chenzhaolong/ird-jsBridge#readme"
+  "homepage": "https://github.com/chenzhaolong/ird-jsBridge#readme",
+  "dependencies": {
+    "typescript": "^3.2.4"
+  }
 }
