--- a/ird-RnBridge/package.json
+++ b/ird-RnBridge/package.json
@@ -2,7 +2,10 @@
   "name": "ird-rnbridge",
   "version": "1.0.0",
   "main": "./dist/RhBridge.js",
-  "dependencies": {},
+  "dependencies": {
+    "@types/md5": "^2.2.0",
+    "md5": "^2.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
