--- a/ird-RnBridge/package.json
+++ b/ird-RnBridge/package.json
@@ -2,10 +2,7 @@
   "name": "ird-rnbridge",
   "version": "1.0.1",
   "main": "./dist/RhBridge.js",
-  "dependencies": {
-    "@types/md5": "^2.2.0",
-    "md5": "^2.2.1"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
