--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/chenzhaolong/ird-jsBridge#readme",
   "dependencies": {
     "@babel/core": "^7.9.6",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^9.0.0",
     "rollup-plugin-json": "^4.0.0",
