--- a/ird-RnBridge/.npmignore
+++ b/ird-RnBridge/.npmignore
@@ -14,6 +14,10 @@ src/rnSide.ts
 
 #utils
 utils/index.ts
+utils/debug.ts
+utils/eventEmitter.ts
+utils/performance.ts
+utils/store.ts
 
 #root
 index.ts
